made it responsive

--- a/templates/stats.htm
+++ b/templates/stats.htm
@@ -54,6 +54,15 @@
             width: 60%;
         }
 
+        table  {
+            width: 100%;
+            table-layout: fixed;
+        }
+
+        td, th {
+            word-wrap: break-word;
+        }
+
         .top_div_img {
             height: 100%;
             width: 22%;
