--- a/static/main.css
+++ b/static/main.css
@@ -90,3 +90,15 @@ footer a {
     text-decoration: none;
     color: #818181;
 }
+
+@media screen and (max-width: 768px) {
+    .container-fluid {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    main {
+        width: 75%;
+        height: 100%;
+    }
+}
